# event-management

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
apps/common/: exceptions.py  utils.py
apps/events/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_event_updated_at.py  0003_alter_event_options_event_capacity_and_more.py  0004_alter_event_description.py
apps/registrations/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/registrations/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py
core/: settings.py  urls.py
tests/: conftest.py
tests/events/: test_api.py
tests/registrations/: test_logic.py
tests/users/: test_services.py
